# AURA

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  AURA Pivot to AI-Native Finance Auditor Service.md  AURA_COMPLETE_DEPLOYMENT.md  AURA_IMPLEMENTATION_COMPLETE.md  BACKEND_HEALTH_VERIFIED.md  BACKEND_INTEGRATION_COMPLETE.md  BEFORE_AFTER_STRUCTURE.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETE_VERIFIED.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_VALIDATION.md  CODE_GENERATION_ANALYSIS.md  COMPLETE_SERVICE_SETUP.md  COMPLETION_SUMMARY.md  CRITICAL_FIXES_REQUIRED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DIRECT_ANSWER_TO_YOUR_QUESTION.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_REDESIGN.md  ENTERPRISE.md  FILE_MANIFEST.md  FRONTEND_BACKEND_INTEGRATION_AUDIT.md  FRONTEND_COMPLETION_CHECKLIST.md  FRONTEND_CRASH_FIXED.md  FRONTEND_REDESIGN_COMPLETE.md  FRONTEND_REDESIGN_SUMMARY.md  FRONTEND_UI_REDESIGN_STATUS.md  HONEST_ENTERPRISE_ASSESSMENT.md  MASTER_INDEX.md  MONITORING_SETUP.md  Makefile  OPERATIONS_RUNBOOK.md  (+50 more)
aurabackend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  __init__.py  alembic.ini  openapi.json  pyproject.toml  requirements-causal.txt  requirements-multimodal.txt  requirements-streaming.txt  requirements.txt  semantic_builder.py  setup_vault.py  smoke_chat.py  start_all.ps1  start_all.sh
aurabackend/# e.g. logs/: aura.log (leave empty for stdout only)
aurabackend/agents/: __init__.py  api.py  base.py  commander.py  commander_tools.py  dpc_verifier.py  executor.py  langgraph_orchestrator.py  memory.py  params.py  planner.py  schemas.py  tool_registry.py  tools.py
aurabackend/alembic/: env.py
aurabackend/api_gateway/: enhanced_main.py  main.py  persistence.py
aurabackend/causal_service/: __init__.py  discovery.py  main.py  models.py  openapi.json
aurabackend/code_generation_service/: main.py  openapi.json
aurabackend/collab/: __init__.py  agent_peer.py  manager.py  yprotocol.py
aurabackend/connectors/: __init__.py  base.py  bigquery_connector.py  duckdb_connector.py  faiss_connector.py  main.py  mysql_connector.py  openapi.json  postgresql_connector.py  registry.py
aurabackend/contracts/: agent_protocol.proto
aurabackend/counterfactual_service/: __init__.py  audit_mapping.py  audit_worker.py  canonical.py  conformal.py  critic_cache.py  cryptography.py  engine.py  exception_queue.py  financial_report.py  forensic_demo.py  iv_estimator.py  main.py  pdf_renderer.py  persistence.py  renderers.py  schemas.py  sensitivity.py  signing.py  tmle.py  verdict.py  warm_demos.py
aurabackend/dar_service/: __init__.py  daemon.py  graph.py  main.py  openapi.json  schemas.py
aurabackend/database/: __init__.py  aura_vault_schema.sql  connection_manager.py  main.py  openapi.json
aurabackend/evolution/: api.py  db.py  engine.py  models.py  pattern_library.py
aurabackend/execution_sandbox/: main.py  openapi.json
aurabackend/execution_sandbox_service/: __init__.py
aurabackend/ingestion_service/: kafka_client.py  main.py  models.py  openapi.json
aurabackend/insights/: __init__.py  engine.py  main.py  openapi.json
aurabackend/insights_service/: engine.py  main.py
aurabackend/knowledge_base/: main.py  openapi.json
aurabackend/mcp_core/: __init__.py  message_models.py  server.py
aurabackend/mcp_servers/: __init__.py  aura_mcp_server.py
aurabackend/metadata_store/: db.py  main.py  models.py  openapi.json  repository.py
aurabackend/orchestration_service/: coordinator.py  main.py  openapi.json
aurabackend/pipeline/: __init__.py  engine.py  generator.py  local_parser.py  models.py
aurabackend/safety/: __init__.py  validator.py
aurabackend/scheduler_service/: IMPLEMENTATION.md  README.md  __init__.py  distributed_queue.py  executor.py  main.py  models.py  openapi.json  repository.py  worker.py
aurabackend/shared/: __init__.py  approval_chains.py  audit_ledger.py  audit_log.py  auth.py  bavt.py  budget.py  cache.py  circuit_breaker.py  config.py  data_profile.py  data_utils.py  database_adapter.py  db_migrations.py  duckdb_factory.py  error_handler.py  exceptions.py  file_service.py  inbound_hooks.py  kafka_client.py  llm_cache.py  llm_provider.py  llm_token_usage.py  logging_config.py  merkle.py  middleware.py  models.py  observability.py  oidc.py  password.py  pii_masking.py  rate_limit.py  safe_paths.py  schema_indexer.py  secret_resolver.py  service_factory.py  sql_identifiers.py  streaming_manager.py  tasks.py  upload_migration.py  (+2 more)
aurabackend/synthetic/: __init__.py  generator.py  schema.py  writer.py
aurabackend/tests/: _mock_llm.py  _synthetic_data.py  conftest.py  promptfoo.yaml  smoke_postgres.py  test_agent_context_metadata.py  test_agents.py  test_api_gateway_persistence.py  test_approval_chains.py  test_audit_encode.py  test_audit_endpoint.py  test_audit_ledger.py  test_audit_ledger_endpoints.py  test_audit_mapping.py  test_audit_merkle.py  test_audit_provenance.py  test_audit_tenant_isolation.py  test_auth.py  test_cache.py  test_causal_service.py  test_chat_commander.py  test_chat_pipeline.py  test_chat_resilience.py  test_circuit_breaker.py  test_code_generation.py  test_collab.py  test_commander_endpoint.py  test_commander_loop.py  test_commander_provider.py  test_commander_tools.py  test_config.py  test_connector_registry.py  test_connectors.py  test_connectors_duckdb_spatial.py  test_connectors_faiss.py  test_counterfactual_canonical.py  test_counterfactual_confidence.py  test_counterfactual_disagreement_challenge.py  test_counterfactual_engine.py  test_counterfactual_eval_gate.py  (+115 more)
aurabackend/tests_contract/: synthetic_monitor.py  test_erp_contracts.py
aurabackend/tests_e2e/: load_test_enterprise.py  test_compose.py
aurabackend/uasr/: __init__.py  actuator_agent.py  causal_rl_evaluator.py  conformal_martingale.py  db.py  distributed_repair.py  drift_detector.py  mapek_worker.py  martingale.py  metrics.py  models.py  numeric_heal_controller.py  numeric_semantics.py  recovery_loop.py  (+7 more)
sdk/: README.md  pyproject.toml
(+961 files in other folders)
