[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-backend"
version = "2.0.0"
description = "AURA — Autonomous Universal Research Analyst backend services"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "THIRD-I-AI"},
]

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "aiofiles>=24.0,<25.0",
    "python-multipart>=0.0.9",

    # ── Data processing ───────────────────────────────────────────────
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=16.0,<19.0",

    # ── Database drivers ──────────────────────────────────────────────
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "aiomysql>=0.2,<1.0",
    "PyMySQL>=1.1,<2.0",
    "aiosqlite>=0.20,<1.0",

    # ── AI / LLM ─────────────────────────────────────────────────────
    "google-generativeai>=0.7,<1.0",

    # ── Security ─────────────────────────────────────────────────────
    "azure-identity>=1.16,<2.0",
    "azure-keyvault-secrets>=4.8,<5.0",
]

[project.optional-dependencies]
# Heavy/enterprise connectors (install only when needed)
enterprise = [
    "pyodbc>=5.1,<6.0",
    "cx_Oracle>=8.3,<9.0",
    "pymongo>=4.7,<5.0",
    "snowflake-connector-python>=3.10,<4.0",
    "google-cloud-bigquery>=3.24,<4.0",
    "redshift-connector>=2.1,<3.0",
    "databricks-sql-connector>=3.1,<4.0",
    "clickhouse-driver>=0.2,<1.0",
    "cassandra-driver>=3.29,<4.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
include = [
    "agents*",
    "api_gateway*",
    "code_generation_service*",
    "connectors*",
    "contracts*",
    "database*",
    "execution_sandbox*",
    "insights*",
    "knowledge_base*",
    "mcp_core*",
    "metadata_store*",
    "orchestration_service*",
    "safety*",
    "scheduler_service*",
    "shared*",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
