[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-counterfactual"
version = "0.1.0"
description = "Python SDK for the AURA Counterfactual Audit Engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "THIRD-I-AI"},
]
keywords = ["aura", "counterfactual", "causal", "audit", "dowhy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "click>=8.1,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "respx>=0.21,<1.0",
    "ruff>=0.4,<1.0",
]
notebook = [
    "ipython>=8.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/THIRD-I-AI/AURA"
Documentation = "https://github.com/THIRD-I-AI/AURA/tree/main/sdk"
Issues = "https://github.com/THIRD-I-AI/AURA/issues"

[project.scripts]
aura-counterfactual = "aura_counterfactual.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E501 ignored to match aurabackend's ruff config — inline-styled HTML
# strings in jupyter.py and long prompt strings would otherwise force
# unnatural line breaks. The backend already runs the same exclusion
# in its own pyproject.toml under the [tool.ruff.lint] section.
ignore = ["E501"]
